noCord solved chat input covering chat without margin, scrollbar fixes

--- a/noCord/style.css
+++ b/noCord/style.css
@@ -416,14 +416,24 @@ than 180px and I don't know why :(
   grid-template-columns: 1fr;
   grid-auto-rows: min-content;
 
+  gap: 0;
+  padding-bottom: 12px;
+
   align-content: start;
   overflow-y: scroll;
-  margin: 2px 4px 18px 0;
+  margin: 2px 4px 0 0;
+
+  background-color: var(--chat-bg);
 }
 
 .chat-container::-webkit-scrollbar {
   width: 10px;
+  background: transparent;
+}
+
+.chat-container::-webkit-scrollbar-track {
   border-radius: 50px;
+  margin-bottom: 12px;
   background-color: var(--header-bg);
 }
 
@@ -472,7 +482,7 @@ than 180px and I don't know why :(
   column-gap: 0;
 
   grid-template-columns: 80px 1fr 40px;
-  padding: 3px 0 3px 0;
+  padding: 16px 0 16px 0;
 }
 
 .sender-icon {
